js262/test/language/expressions/compound-assignment/add-eval-strict.js


/*---
es5id: 11.13.2-6-4-s
esid: sec-assignment-operators
description: >
    Strict Mode - SyntaxError is thrown if the identifier eval appear
    as the LeftHandSideExpression of a Compound Assignment operator(+=)
flags: [onlyStrict]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

eval += 20;
